mypy config to exclude, and test selection via markers
- mypy was configred via `files` which fails when specifying a target dir. Now turned into an exclude in the config, and adding explicit files to the Makefile when a service is selected.
- added SKIP_MYPY to be able to skip mypy check (as long as the mypy chnage is not complete)
- using conftest.py to give all the tests default markers
- the include/exclude from the makefile is now in the conftest.py marking as well
- for services, also picking up test that reference that service in its name (specific pattern)

--- a/setup.cfg
+++ b/setup.cfg
@@ -211,7 +211,130 @@ universal=1
 
 [tool:pytest]
 markers =
+    # special cases
     network: marks tests which require network connection
+    parallel: can be run in parallel
+    parallel_server_only: can be run in parallel (in server mode only)
+    skip_server: should not be run in server mode
+    # services
+    acm: acm service
+    acmpca: acmpca service
+    amp: amp service
+    apigateway: apigateway service
+    apigatewayv2: apigatewayv2 service
+    applicationautoscaling: applicationautoscaling service
+    appsync: appsync service
+    athena: athena service
+    autoscaling: autoscaling service
+    awslambda: awslambda service
+    batch: batch service
+    batch_simple: batch_simple service
+    budgets: budgets service
+    ce: ce service
+    cloudformation: cloudformation service
+    cloudfront: cloudfront service
+    cloudtrail: cloudtrail service
+    cloudwatch: cloudwatch service
+    codebuild: codebuild service
+    codecommit: codecommit service
+    codepipeline: codepipeline service
+    cognitoidentity: cognitoidentity service
+    cognitoidp: cognitoidp service
+    comprehend: comprehend service
+    config: config service
+    databrew: databrew service
+    datapipeline: datapipeline service
+    datasync: datasync service
+    dax: dax service
+    dms: dms service
+    ds: ds service
+    dynamodb: dynamodb service
+    dynamodb_v20111205: dynamodb_v20111205 service
+    dynamodbstreams: dynamodbstreams service
+    ebs: ebs service
+    ec2: ec2 service
+    ec2instanceconnect: ec2instanceconnect service
+    ecr: ecr service
+    ecs: ecs service
+    efs: efs service
+    eks: eks service
+    elasticache: elasticache service
+    elasticbeanstalk: elasticbeanstalk service
+    elastictranscoder: elastictranscoder service
+    elb: elb service
+    elbv2: elbv2 service
+    emr: emr service
+    emrcontainers: emrcontainers service
+    emrserverless: emrserverless service
+    es: es service
+    events: events service
+    firehose: firehose service
+    forecast: forecast service
+    glacier: glacier service
+    glue: glue service
+    greengrass: greengrass service
+    guardduty: guardduty service
+    iam: iam service
+    identitystore: identitystore service
+    instance_metadata: instance_metadata service
+    iot: iot service
+    iotdata: iotdata service
+    kinesis: kinesis service
+    kinesisvideo: kinesisvideo service
+    kinesisvideoarchivedmedia: kinesisvideoarchivedmedia service
+    kms: kms service
+    logs: logs service
+    managedblockchain: managedblockchain service
+    mediaconnect: mediaconnect service
+    medialive: medialive service
+    mediapackage: mediapackage service
+    mediastore: mediastore service
+    mediastoredata: mediastoredata service
+    meteringmarketplace: meteringmarketplace service
+    moto_api: moto_api service
+    moto_server: moto_server service
+    mq: mq service
+    neptune: neptune service
+    opsworks: opsworks service
+    organizations: organizations service
+    packages: packages service
+    personalize: personalize service
+    pinpoint: pinpoint service
+    polly: polly service
+    quicksight: quicksight service
+    ram: ram service
+    rds: rds service
+    redshift: redshift service
+    redshiftdata: redshiftdata service
+    rekognition: rekognition service
+    resourcegroups: resourcegroups service
+    resourcegroupstaggingapi: resourcegroupstaggingapi service
+    route53: route53 service
+    route53resolver: route53resolver service
+    s3: s3 service
+    s3bucket_path: s3bucket_path service
+    s3control: s3control service
+    sagemaker: sagemaker service
+    sdb: sdb service
+    secretsmanager: secretsmanager service
+    servicediscovery: servicediscovery service
+    servicequotas: servicequotas service
+    ses: ses service
+    signer: signer service
+    sns: sns service
+    sqs: sqs service
+    ssm: ssm service
+    ssoadmin: ssoadmin service
+    stepfunctions: stepfunctions service
+    sts: sts service
+    support: support service
+    swf: swf service
+    textract: textract service
+    timestreamwrite: timestreamwrite service
+    transcribe: transcribe service
+    utilities: utilities service
+    wafv2: wafv2 service
+    xray: xray service
 
 [coverage:run]
 relative_files = True
@@ -229,7 +352,14 @@ disable = W,C,R,E
 enable = anomalous-backslash-in-string, arguments-renamed, dangerous-default-value, deprecated-module, function-redefined, import-self, redefined-builtin, redefined-outer-name, reimported, pointless-statement, super-with-arguments, unused-argument, unused-import, unused-variable, useless-else-on-loop, wildcard-import
 
 [mypy]
-files= moto/a*,moto/b*,moto/c*,moto/d*,moto/e*,moto/f*,moto/moto_api,moto/neptune
+files= moto/a*,moto/b*,moto/c*,moto/d*,moto/e*,moto/moto_api,moto/neptune
+exclude = (?x)(
+    ^moto/[g-l]
+    | ^moto/m(?!oto_api)  # all m*, except moto_api
+    | ^moto/n(?!eptune)   # all n*, except neptune
+    | ^moto/[o-z]
+ )
+
 show_column_numbers=True
 show_error_codes = True
 disable_error_code=abstract
