by default, just run all
optionally use SKIP or XFAIL. For the latter we raise specific exceptions for not-running docker cases where encountered, allowing to to check the marked cases are indeed in need of a running docker.

--- a/setup.cfg
+++ b/setup.cfg
@@ -211,7 +211,8 @@ universal=1
 
 [tool:pytest]
 markers =
-    network: marks tests which require network connection
+    network: requires network connection
+    requires_docker: requires running docker
 
 [coverage:run]
 relative_files = True
